--- a/OpenCVStitch/OpenCVStitch.vcxproj
+++ b/OpenCVStitch/OpenCVStitch.vcxproj
@@ -104,6 +104,7 @@
     <None Include="res\OpenCVStitch.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\MyBlender.h" />
     <ClInclude Include="OpenCVStitch.h" />
     <ClInclude Include="OpenCVStitchDlg.h" />
     <ClInclude Include="Resource.h" />
@@ -112,6 +113,10 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\MyBlender.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="..\WebCam.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
