--- a/OpenCVStitch/OpenCVStitch.vcxproj
+++ b/OpenCVStitch/OpenCVStitch.vcxproj
@@ -106,6 +106,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\MyBlender.h" />
+    <ClInclude Include="..\MySeamFinder.h" />
+    <ClInclude Include="MyCompensator.h" />
     <ClInclude Include="OpenCVStitch.h" />
     <ClInclude Include="OpenCVStitchDlg.h" />
     <ClInclude Include="Resource.h" />
@@ -118,10 +120,15 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\MySeamFinder.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="..\WebCam.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="MyCompensator.cpp" />
     <ClCompile Include="OpenCVStitch.cpp" />
     <ClCompile Include="OpenCVStitchDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -132,6 +139,10 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="OpenCVStitch.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="Blender.cu" />
+    <CudaCompile Include="Compensator.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
