--- a/.cproject
+++ b/.cproject
@@ -41,15 +41,11 @@
 							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.base.1272446600" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.base">
 								<option id="gnu.cpp.link.option.libs.1359348180" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="cudart"/>
-									<listOptionValue builtIn="false" value="opencv_calib3d"/>
 									<listOptionValue builtIn="false" value="opencv_core"/>
-									<listOptionValue builtIn="false" value="opencv_features2d"/>
-									<listOptionValue builtIn="false" value="opencv_flann"/>
 									<listOptionValue builtIn="false" value="opencv_gpu"/>
 									<listOptionValue builtIn="false" value="opencv_highgui"/>
 									<listOptionValue builtIn="false" value="opencv_imgproc"/>
 									<listOptionValue builtIn="false" value="opencv_stitching"/>
-									<listOptionValue builtIn="false" value="opencv_video"/>
 								</option>
 								<option id="gnu.cpp.link.option.paths.1884274337" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
 									<listOptionValue builtIn="false" value="/usr/local/cuda/lib64"/>
@@ -67,10 +63,10 @@
 					</folderInfo>
 					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.871053135.704843143" name="Blender.cu" rcbsApplicability="disable" resourcePath="Blender.cu" toolsToInvoke="nvcc.compiler.base.338489345">
 						<tool id="nvcc.compiler.base.338489345" name="NVCC Compiler" superClass="nvcc.compiler.base">
-							<option id="nvcc.compiler.deviceDebug.747682198" superClass="nvcc.compiler.deviceDebug" value="true" valueType="boolean"/>
-							<option id="nvcc.compiler.option.level.349504784" superClass="nvcc.compiler.option.level" value="true" valueType="boolean"/>
-							<option defaultValue="nvcc.compiler.optimization.level.none" id="nvcc.compiler.optimization.level.1743825637" superClass="nvcc.compiler.optimization.level" valueType="enumerated"/>
-							<option id="nvcc.compiler.pic.1735819817" superClass="nvcc.compiler.pic"/>
+							<option id="nvcc.compiler.deviceDebug.747682198" name="Generate device debug information (-G)" superClass="nvcc.compiler.deviceDebug" value="true" valueType="boolean"/>
+							<option id="nvcc.compiler.option.level.349504784" name="Generate host debug information (-g)" superClass="nvcc.compiler.option.level" value="true" valueType="boolean"/>
+							<option defaultValue="nvcc.compiler.optimization.level.none" id="nvcc.compiler.optimization.level.1743825637" name="Optimization Level" superClass="nvcc.compiler.optimization.level" valueType="enumerated"/>
+							<option id="nvcc.compiler.pic.1735819817" name="Position Independent Code (-fPIC)" superClass="nvcc.compiler.pic"/>
 							<inputType id="nvcc.compiler.input.cu.881527090" superClass="nvcc.compiler.input.cu"/>
 							<inputType id="nvcc.compiler.input.cpp.223195043" superClass="nvcc.compiler.input.cpp"/>
 							<inputType id="nvcc.compiler.input.c.1684375610" superClass="nvcc.compiler.input.c"/>
@@ -143,15 +139,11 @@
 								</option>
 								<option id="gnu.cpp.link.option.libs.1751781304" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="cudart"/>
-									<listOptionValue builtIn="false" value="opencv_calib3d"/>
 									<listOptionValue builtIn="false" value="opencv_core"/>
-									<listOptionValue builtIn="false" value="opencv_features2d"/>
-									<listOptionValue builtIn="false" value="opencv_flann"/>
 									<listOptionValue builtIn="false" value="opencv_gpu"/>
 									<listOptionValue builtIn="false" value="opencv_highgui"/>
 									<listOptionValue builtIn="false" value="opencv_imgproc"/>
 									<listOptionValue builtIn="false" value="opencv_stitching"/>
-									<listOptionValue builtIn="false" value="opencv_video"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.2117868440" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
