--- a/OpenCVStitch/OpenCVStitch.vcxproj
+++ b/OpenCVStitch/OpenCVStitch.vcxproj
@@ -108,6 +108,7 @@
     <ClInclude Include="..\MyBlender.h" />
     <ClInclude Include="..\MySeamFinder.h" />
     <ClInclude Include="MyCompensator.h" />
+    <ClInclude Include="MyStitcher.h" />
     <ClInclude Include="OpenCVStitch.h" />
     <ClInclude Include="OpenCVStitchDlg.h" />
     <ClInclude Include="Resource.h" />
@@ -129,6 +130,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="MyCompensator.cpp" />
+    <ClCompile Include="MyStitcher.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="OpenCVStitch.cpp" />
     <ClCompile Include="OpenCVStitchDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -141,7 +146,7 @@
     <ResourceCompile Include="OpenCVStitch.rc" />
   </ItemGroup>
   <ItemGroup>
-    <CudaCompile Include="Blender.cu" />
+    <CudaCompile Include="..\Blender.cu" />
     <CudaCompile Include="Compensator.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
