--- a/OpenCVStitch/OpenCVStitch.vcxproj
+++ b/OpenCVStitch/OpenCVStitch.vcxproj
@@ -106,8 +106,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\MyBlender.h" />
+    <ClInclude Include="..\MyCompensator.h" />
     <ClInclude Include="..\MySeamFinder.h" />
-    <ClInclude Include="MyCompensator.h" />
     <ClInclude Include="MyStitcher.h" />
     <ClInclude Include="OpenCVStitch.h" />
     <ClInclude Include="OpenCVStitchDlg.h" />
@@ -118,6 +118,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\MyBlender.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="..\MyCompensator.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
@@ -133,7 +137,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="MyCompensator.cpp" />
     <ClCompile Include="MyStitcher.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
