--- a/.cproject
+++ b/.cproject
@@ -72,23 +72,20 @@
 							<inputType id="nvcc.compiler.input.c.1684375610" superClass="nvcc.compiler.input.c"/>
 						</tool>
 					</fileInfo>
-					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.871053135.566398150" name="gpuApply.cu" rcbsApplicability="disable" resourcePath="gpuApply.cu" toolsToInvoke="nvcc.compiler.base.1188278236">
-						<tool id="nvcc.compiler.base.1188278236" name="NVCC Compiler" superClass="nvcc.compiler.base">
-							<option id="nvcc.compiler.deviceDebug.19548992" name="Generate device debug information (-G)" superClass="nvcc.compiler.deviceDebug" value="true" valueType="boolean"/>
-							<option id="nvcc.compiler.option.level.162542338" name="Generate host debug information (-g)" superClass="nvcc.compiler.option.level" value="true" valueType="boolean"/>
-							<option defaultValue="nvcc.compiler.optimization.level.none" id="nvcc.compiler.optimization.level.140624904" name="Optimization Level" superClass="nvcc.compiler.optimization.level" valueType="enumerated"/>
-							<option id="nvcc.compiler.pic.610767418" name="Position Independent Code (-fPIC)" superClass="nvcc.compiler.pic"/>
-							<inputType id="nvcc.compiler.input.cu.1484452527" superClass="nvcc.compiler.input.cu"/>
-							<inputType id="nvcc.compiler.input.cpp.104351038" superClass="nvcc.compiler.input.cpp"/>
-							<inputType id="nvcc.compiler.input.c.1807749785" superClass="nvcc.compiler.input.c"/>
-						</tool>
-						<tool customBuildStep="true" id="org.eclipse.cdt.managedbuilder.ui.rcbs.1459745863" name="Resource Custom Build Step">
-							<inputType id="org.eclipse.cdt.managedbuilder.ui.rcbs.inputtype.1787577956" name="Resource Custom Build Step Input Type">
-								<additionalInput kind="additionalinputdependency" paths=""/>
-							</inputType>
-							<outputType id="org.eclipse.cdt.managedbuilder.ui.rcbs.outputtype.1278725624" name="Resource Custom Build Step Output Type"/>
+					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.871053135.1194927301" name="Compensator.cu" rcbsApplicability="disable" resourcePath="Compensator.cu" toolsToInvoke="nvcc.compiler.base.1970433056">
+						<tool command="nvcc -c" id="nvcc.compiler.base.1970433056" name="NVCC Compiler" superClass="nvcc.compiler.base">
+							<option id="nvcc.compiler.deviceDebug.1530647205" name="Generate device debug information (-G)" superClass="nvcc.compiler.deviceDebug" value="true" valueType="boolean"/>
+							<option id="nvcc.compiler.option.level.1744490514" name="Generate host debug information (-g)" superClass="nvcc.compiler.option.level" value="true" valueType="boolean"/>
+							<option defaultValue="nvcc.compiler.optimization.level.none" id="nvcc.compiler.optimization.level.171710529" name="Optimization Level" superClass="nvcc.compiler.optimization.level" valueType="enumerated"/>
+							<option id="nvcc.compiler.pic.1881215898" name="Position Independent Code (-fPIC)" superClass="nvcc.compiler.pic"/>
+							<inputType id="nvcc.compiler.input.cu.1702233682" superClass="nvcc.compiler.input.cu"/>
+							<inputType id="nvcc.compiler.input.cpp.1117028686" superClass="nvcc.compiler.input.cpp"/>
+							<inputType id="nvcc.compiler.input.c.1095581102" superClass="nvcc.compiler.input.c"/>
 						</tool>
 					</fileInfo>
+					<sourceEntries>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+					</sourceEntries>
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
@@ -172,22 +169,15 @@
 							<outputType id="org.eclipse.cdt.managedbuilder.ui.rcbs.outputtype.1855226773" name="Resource Custom Build Step Output Type"/>
 						</tool>
 					</fileInfo>
-					<fileInfo id="cdt.managedbuild.config.gnu.exe.release.909893455.342638207" name="gpuApply.cu" rcbsApplicability="disable" resourcePath="gpuApply.cu" toolsToInvoke="nvcc.compiler.base.226580005">
-						<tool id="nvcc.compiler.base.226580005" name="NVCC Compiler" superClass="nvcc.compiler.base">
-							<option id="nvcc.compiler.deviceDebug.733503384" name="Generate device debug information (-G)" superClass="nvcc.compiler.deviceDebug"/>
-							<option id="nvcc.compiler.option.level.42447566" name="Generate host debug information (-g)" superClass="nvcc.compiler.option.level"/>
-							<option defaultValue="nvcc.compiler.optimization.level.most" id="nvcc.compiler.optimization.level.335093752" name="Optimization Level" superClass="nvcc.compiler.optimization.level" valueType="enumerated"/>
-							<option id="nvcc.compiler.pic.1626588978" name="Position Independent Code (-fPIC)" superClass="nvcc.compiler.pic"/>
-							<option id="nvcc.compiler.machine.1129190942" name="Architecture (--machine)" superClass="nvcc.compiler.machine" value="nvcc.compiler.machineDefault" valueType="enumerated"/>
-							<inputType id="nvcc.compiler.input.cu.1681278096" superClass="nvcc.compiler.input.cu"/>
-							<inputType id="nvcc.compiler.input.cpp.1917504596" superClass="nvcc.compiler.input.cpp"/>
-							<inputType id="nvcc.compiler.input.c.79868224" superClass="nvcc.compiler.input.c"/>
-						</tool>
-						<tool customBuildStep="true" id="org.eclipse.cdt.managedbuilder.ui.rcbs.485265267" name="Resource Custom Build Step">
-							<inputType id="org.eclipse.cdt.managedbuilder.ui.rcbs.inputtype.79380316" name="Resource Custom Build Step Input Type">
-								<additionalInput kind="additionalinputdependency" paths=""/>
-							</inputType>
-							<outputType id="org.eclipse.cdt.managedbuilder.ui.rcbs.outputtype.222504977" name="Resource Custom Build Step Output Type"/>
+					<fileInfo id="cdt.managedbuild.config.gnu.exe.release.909893455.1703921961" name="Compensator.cu" rcbsApplicability="disable" resourcePath="Compensator.cu" toolsToInvoke="nvcc.compiler.base.1060383825">
+						<tool command="nvcc -c" id="nvcc.compiler.base.1060383825" name="NVCC Compiler" superClass="nvcc.compiler.base">
+							<option id="nvcc.compiler.deviceDebug.857107230" name="Generate device debug information (-G)" superClass="nvcc.compiler.deviceDebug"/>
+							<option id="nvcc.compiler.option.level.510823049" name="Generate host debug information (-g)" superClass="nvcc.compiler.option.level"/>
+							<option defaultValue="nvcc.compiler.optimization.level.most" id="nvcc.compiler.optimization.level.1630914166" name="Optimization Level" superClass="nvcc.compiler.optimization.level" valueType="enumerated"/>
+							<option id="nvcc.compiler.pic.270625223" name="Position Independent Code (-fPIC)" superClass="nvcc.compiler.pic"/>
+							<inputType id="nvcc.compiler.input.cu.1211936804" superClass="nvcc.compiler.input.cu"/>
+							<inputType id="nvcc.compiler.input.cpp.730031549" superClass="nvcc.compiler.input.cpp"/>
+							<inputType id="nvcc.compiler.input.c.2076364350" superClass="nvcc.compiler.input.c"/>
 						</tool>
 					</fileInfo>
 				</configuration>
