--- a/OpenCVStitch2013/OpenCVStitch2013.vcxproj
+++ b/OpenCVStitch2013/OpenCVStitch2013.vcxproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 6.5.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -156,8 +157,8 @@
     <ResourceCompile Include="OpenCVStitch2013.rc" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Blender.cu" />
-    <None Include="..\Compensator.cu" />
+    <CudaCompile Include="..\Blender.cu" />
+    <CudaCompile Include="..\Compensator.cu" />
     <None Include="packages.config" />
     <None Include="res\OpenCVStitch2013.rc2" />
   </ItemGroup>
@@ -167,6 +168,7 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\OpenCV.2.4.10\build\native\OpenCV.targets" Condition="Exists('..\packages\OpenCV.2.4.10\build\native\OpenCV.targets')" />
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 6.5.targets" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
