--- a/OpenCVStitch2013/OpenCVStitch2013.vcxproj
+++ b/OpenCVStitch2013/OpenCVStitch2013.vcxproj
@@ -177,4 +177,9 @@
     <Error Condition="!Exists('..\packages\OpenCV.2.4.10\build\native\OpenCV.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\OpenCV.2.4.10\build\native\OpenCV.props'))" />
     <Error Condition="!Exists('..\packages\OpenCV.2.4.10\build\native\OpenCV.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\OpenCV.2.4.10\build\native\OpenCV.targets'))" />
   </Target>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="OpenCVStitch2013.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
