--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,2 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<repositories />
+<repositories>
+  <repository path="..\OpenCVStitch\packages.config" />
+</repositories>
